@@ -3,14 +3,12 @@ package com.gtocore.common.machine.multiblock.electric.space;
 import com.gtocore.common.saved.DysonSphereSavaedData;
 
 import com.gtolib.api.machine.multiblock.ElectricMultiblockMachine;
-import com.gtolib.api.recipe.Recipe;
-import com.gtolib.api.recipe.modifier.RecipeModifier;
 import com.gtolib.utils.MachineUtils;
 
 import com.gregtechceu.gtceu.api.blockentity.MetaMachineBlockEntity;
-import com.gregtechceu.gtceu.api.capability.recipe.FluidRecipeCapability;
-import com.gregtechceu.gtceu.api.recipe.content.Content;
-import com.gregtechceu.gtceu.api.recipe.content.ContentModifier;
+import com.gregtechceu.gtceu.api.recipe.GTRecipe;
+import com.gregtechceu.gtceu.api.recipe.handler.RecipeHandlerUnit;
+import com.gregtechceu.gtceu.api.recipe.modifier.RecipeModifier;
 
 import net.minecraft.core.BlockPos;
 import net.minecraft.network.chat.Component;
@@ -41,9 +39,9 @@ public final class SpaceProbeSurfaceReceptionMachine extends ElectricMultiblockM
     }
 
     @Override
-    protected boolean beforeWorking(@NotNull Recipe recipe) {
+    public void beforeWorking(@NotNull GTRecipe recipe) {
         if (use) DysonSphereSavaedData.setDysonUse(getDimension(), true);
-        return super.beforeWorking(recipe);
+        super.beforeWorking(recipe);
     }
 
     @Override
@@ -67,14 +65,14 @@ public final class SpaceProbeSurfaceReceptionMachine extends ElectricMultiblockM
     @Override
     public GTRecipe getRealRecipe(@NotNull RecipeHandlerUnit unit, @NotNull GTRecipe recipe) {
         if (!PlanetApi.API.isSpace(getLevel())) return null;
-        recipe = RecipeModifier.perfectOverclocking(this, recipe);
+        recipe = RecipeModifier.perfectOverclocking(this, unit, recipe);
         if (recipe == null) return null;
         if (!DysonSphereSavaedData.getDimensionUse(getDimension())) {
             double number = (double) DysonSphereSavaedData.getDimensionData(getDimension()).leftInt() / 100;
             if (number > 1) {
                 use = true;
-                Content content = recipe.outputs.get(FluidRecipeCapability.CAP).get(0);
-                recipe.outputs.put(FluidRecipeCapability.CAP, List.of(content.copy(FluidRecipeCapability.CAP, ContentModifier.multiplier(number))));
+                var content = recipe.fluidOutputs.getFirst();
+                recipe.fluidOutputs = List.of(content.copy((long) number));
                 return recipe;
             }
         }
